fixed the media queries. Website should look good on iphones now. and different screen sizes.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 header {
     position: fixed;
     top: 0;
@@ -9,7 +13,6 @@ header {
 
 .nav {
     display: flex;
-    justify-content: flex-end;
     top: 0;
     left: 0;;
     z-index: 10;
@@ -49,8 +52,9 @@ nav a {
     width: 100%;
     height: 90vh;
     background-color: rgb(1, 3, 20);
-    border: 2px solid red;
+    background: linear-gradient(to bottom, rgb(1, 3, 20), rgb(1, 3, 20));
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -88,6 +92,7 @@ h2 {
 }
 
 .project-image {
+    display: block;
     height: calc(100%-6rem);
     width: 100%;
     object-fit: cover;
@@ -95,6 +100,8 @@ h2 {
 
 /* This is for the projects section */
 .projects-grid a {
+    display: block;
+    max-width: 100%;
     text-decoration: none;
     font-size: 1.75em;
     text-align: center;
@@ -153,10 +160,28 @@ h2 {
     #welcome-section {
         width: 100%;
     }
-    nav li {
-        font-size: 1em !important;
+    h1 {
+        font-size: 2em;
     }
-  }
+    section > p {
+        font-size: 2.75em;
+    }
+    nav li {
+        padding: 10px 0px;
+    }
+    nav a {
+        padding: 0 10px;
+        font-size: 30px;
+    }
+    h2 {
+        position: relative;
+        top: -45px;
+    }
+    .contact-links {
+        margin: 0 auto; 
+        padding: 1rem 0 1rem 1rem;
+    }
+}
   
   /* sm */
   @media (max-width: 640px) {
@@ -169,25 +194,16 @@ h2 {
     #welcome-section {
         width: 100%;
     }
-    nav li {
-        font-size: 20px !important;
+    nav a {
+        font-size: 32px;
+        padding: 0;
     }
+    h1 {
+        font-size: 3em;
     }
-
-    /* This is to prevent project and contact
-    section from getting tangled together
-    when screen size is smaller */
-    @media (max-width: 690px) {
-        .projects-grid {
-            grid-template-columns: 1fr; /* Stack items in one column */
-            gap: 20px; /* Reduce spacing between items */
-        }
+}
+        
     
-        #projects {
-            margin-bottom: 2rem; /* Add spacing below the projects section */
-            height: auto; /* Allow height to adjust based on content */
-        }
-    }
 
   
   /* md */
@@ -203,6 +219,19 @@ h2 {
     }
     nav li {
         font-size: 2em;
+    }
+    #projects {
+        height: auto; /* Allow height to adjust */
+        margin-bottom: 2rem; /* Add spacing below the section */
+    }
+
+    .projects-grid {
+        grid-template-columns: 1fr; /* Stack items vertically */
+        gap: 20px; /* Adjust spacing between items */
+    }
+
+    #contact {
+        padding-top: 2rem; /* Optional: Add padding to the contact section */
     }
   }
   
